--- a/src/components/Products/ProductModal.module.css
+++ b/src/components/Products/ProductModal.module.css
@@ -10,6 +10,11 @@
   max-width: 50%;
   margin-right: 20px;
 }
+
+.Details_img__3Dm5r img {
+  max-width: 100%; 
+  height: auto; 
+}
 .Details_goback__rK7qw {
   padding: 0;
   margin-bottom: 20px;
@@ -50,19 +55,6 @@
 .Details_amount-value__2VKAn {
   font-size: 18px;
   color: #333;
-}
-
-img
-{
-    max-width: 100%;
-    max-height: 100%;
-}
-
-.image_wrapper
-{
-    width: 1024px;
-    height: auto;
-    padding:0%;
 }
 
 
